Slight changes in Publishing

--- a/client/index.html
+++ b/client/index.html
@@ -12,15 +12,15 @@
   <h1>🚩 Capture the Flag Remote</h1>
   <div class="grid">
     <div></div>
-    <button onclick="send(0.5, 0)">⬆️</button>
+    <button onclick="send(0.5, 0)">Up</button>
     <div></div>
 
-    <button onclick="send(0, 1)">⬅️</button>
-    <button onclick="send(0, 0)">⏹️</button>
-    <button onclick="send(0, -1)">➡️</button>
+    <button onclick="send(0, 1)">Left</button>
+    <button onclick="send(0, 0)">Stop</button>
+    <button onclick="send(0, -1)">Right</button>
 
     <div></div>
-    <button onclick="send(-0.5, 0)">⬇️</button>
+    <button onclick="send(-0.5, 0)">Down</button>
     <div></div>
   </div>
 
